src/main/java/wci/frontend/TypeScriptParser.java
/* TypeScriptParser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. TypeScriptParser.java */
package wci.frontend;
import java.util.*;
import java.util.ArrayList;
import java.io.*;

import wci.intermediate.*;
import wci.intermediate.symtabimpl.*;
import wci.backend.*;
import wci.util.*;

import wci.intermediate.icodeimpl.ICodeNodeImpl;
import static wci.intermediate.symtabimpl.SymTabKeyImpl.*;
import static wci.intermediate.symtabimpl.DefinitionImpl.*;
import static wci.intermediate.symtabimpl.RoutineCodeImpl.*;
import static wci.intermediate.symtabimpl.SymTabKeyImpl.*;
import static wci.intermediate.icodeimpl.ICodeKeyImpl.*;

public class TypeScriptParser/*@bgen(jjtree)*/implements TypeScriptParserTreeConstants, TypeScriptParserConstants {/*@bgen(jjtree)*/
  protected static JJTTypeScriptParserState jjtree = new JJTTypeScriptParserState();private static SymTabStack symTabStack;
    private static SymTabEntry programId;
        public static boolean generate_code_flag = true;
    public static void main(String[] args)
        throws Exception
    {
        // Create and initialize the symbol table stack.
        symTabStack = SymTabFactory.createSymTabStack();
        Predefined.initialize(symTabStack);

        String sourceFilePath = args[0];

        // Parse a Typescript program.
        Reader    reader = new FileReader(sourceFilePath);
        TypeScriptParser parser = new TypeScriptParser(reader);
        SimpleNode rootNode = parser.program();
                rootNode.dump(">");
        // Print the cross-reference table.
                CrossReferencer crossReferencer = new CrossReferencer();
                crossReferencer.print(symTabStack);

        // Visit the parse tree nodes to decorate them with type information.
        TypeSetterVisitor typeVisitor = new TypeSetterVisitor();
        rootNode.jjtAccept(typeVisitor, null);

        // Create and initialize the ICode wrapper for the parse tree.
        ICode iCode = ICodeFactory.createICode();
        iCode.setRoot(rootNode);
        programId.setAttribute(ROUTINE_ICODE, iCode);

        // Print the parse tree.
        ParseTreePrinter treePrinter = new ParseTreePrinter(System.out);
        treePrinter.print(symTabStack);
                if(generate_code_flag)
                {
                Backend backend = BackendFactory.createBackend("compile");
                backend.process(iCode, symTabStack, objectFileName(sourceFilePath));
                }
                else
                {
                        System.out.println("COULD NOT GENERATE CODE DUE TO SYNTAX ERRORS");
                }
    }

    private static String fileNameWithoutExtension(String fileName) {
        int dotIndex = fileName.lastIndexOf('.');
        return fileName.substring(0, dotIndex);
    }

    private static String objectFileName(String fileName) {
        return fileNameWithoutExtension(fileName) + ".j";
    }

  static final public SimpleNode program() throws ParseException {/*@bgen(jjtree) program */
  ASTprogram jjtn000 = new ASTprogram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
programId = symTabStack.enterLocal("TypeScript");
        programId.setTypeSpec(Predefined.charType);
        programId.setDefinition(DefinitionImpl.PROGRAM);
        programId.setAttribute(ROUTINE_SYMTAB, symTabStack.push());
        programId.setAttribute(FUNCTIONS_CODE, new ArrayList<SimpleNode>());
        jjtn000.setTypeSpec(Predefined.charType);

        symTabStack.setProgramId(programId);
      Statement_list();
jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

/*if statements*/
  static final public void boolean_op() throws ParseException {/*@bgen(jjtree) boolean_op */
                     ASTboolean_op jjtn000 = new ASTboolean_op(JJTBOOLEAN_OP);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);jjtn000.setAttribute(IS_WHILE, false);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LT:{
ASTLESS_THAN jjtn001 = new ASTLESS_THAN(JJTLESS_THAN);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(LT);
        } finally {
if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, true);
          }
        }
        break;
        }
      case GT:{
ASTGREATER_THAN jjtn002 = new ASTGREATER_THAN(JJTGREATER_THAN);
           boolean jjtc002 = true;
           jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(GT);
        } finally {
if (jjtc002) {
             jjtree.closeNodeScope(jjtn002, true);
           }
        }
        break;
        }
      case LE:{
ASTLESS_THAN_OR_EQUALS jjtn003 = new ASTLESS_THAN_OR_EQUALS(JJTLESS_THAN_OR_EQUALS);
            boolean jjtc003 = true;
            jjtree.openNodeScope(jjtn003);
        try {
          jj_consume_token(LE);
        } finally {
if (jjtc003) {
              jjtree.closeNodeScope(jjtn003, true);
            }
        }
        break;
        }
      case GE:{
ASTGREATER_THAN_OR_EQUALS jjtn004 = new ASTGREATER_THAN_OR_EQUALS(JJTGREATER_THAN_OR_EQUALS);
             boolean jjtc004 = true;
             jjtree.openNodeScope(jjtn004);
        try {
          jj_consume_token(GE);
        } finally {
if (jjtc004) {
               jjtree.closeNodeScope(jjtn004, true);
             }
        }
        break;
        }
      case DOUBLE_EQ:{
ASTEQUALITY jjtn005 = new ASTEQUALITY(JJTEQUALITY);
              boolean jjtc005 = true;
              jjtree.openNodeScope(jjtn005);
        try {
          jj_consume_token(DOUBLE_EQ);
        } finally {
if (jjtc005) {
                jjtree.closeNodeScope(jjtn005, true);
              }
        }
        break;
        }
      case NOT_EQ:{
ASTNOT_EQUALS jjtn006 = new ASTNOT_EQUALS(JJTNOT_EQUALS);
               boolean jjtc006 = true;
               jjtree.openNodeScope(jjtn006);
        try {
          jj_consume_token(NOT_EQ);
        } finally {
if (jjtc006) {
                 jjtree.closeNodeScope(jjtn006, true);
               }
        }
        break;
        }
      case OR:{
ASTOR jjtn007 = new ASTOR(JJTOR);
               boolean jjtc007 = true;
               jjtree.openNodeScope(jjtn007);
        try {
          jj_consume_token(OR);
        } finally {
if (jjtc007) {
                 jjtree.closeNodeScope(jjtn007, true);
               }
        }
        break;
        }
      case AND:{
ASTAND jjtn008 = new ASTAND(JJTAND);
                boolean jjtc008 = true;
                jjtree.openNodeScope(jjtn008);
        try {
          jj_consume_token(AND);
        } finally {
if (jjtc008) {
                  jjtree.closeNodeScope(jjtn008, true);
                }
        }
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void condition() throws ParseException {/*@bgen(jjtree) condition */
  ASTcondition jjtn000 = new ASTcondition(JJTCONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LEFT_PARAN);
      Expression();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LT:
      case GT:
      case LE:
      case GE:
      case DOUBLE_EQ:
      case OR:
      case AND:
      case NOT_EQ:{
        boolean_op();
        Expression();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      jj_consume_token(RIGHT_PARAN);
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

//if statement grammar 
  static final public void if_body() throws ParseException {/*@bgen(jjtree) if_body */
  ASTif_body jjtn000 = new ASTif_body(JJTIF_BODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Compound_stmt();
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void if_stmt() throws ParseException {/*@bgen(jjtree) if_stmt */
  ASTif_stmt jjtn000 = new ASTif_stmt(JJTIF_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if_part();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ELSE:{
        else_part();
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void if_part() throws ParseException {/*@bgen(jjtree) if_part */
  ASTif_part jjtn000 = new ASTif_part(JJTIF_PART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
      condition();
      if_body();
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void else_part() throws ParseException {/*@bgen(jjtree) else_part */
  ASTelse_part jjtn000 = new ASTelse_part(JJTELSE_PART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ELSE);
      if_body();
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void while_node() throws ParseException {/*@bgen(jjtree) while_node */
  ASTwhile_node jjtn000 = new ASTwhile_node(JJTWHILE_NODE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WHILE);
      condition();
      Compound_stmt();
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Statement() throws ParseException {
    try {
      if (jj_2_1(3)) {
        Assignment();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:{
          if_stmt();
          break;
          }
        case WHILE:{
          while_node();
          break;
          }
        case PRINTLN:{
          println();
          break;
          }
        case FUNCTION:{
          FunctionDeclaration();
          break;
          }
        case IDENTIFIER:{
          Function_invocation();
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (ParseException ex) {
HashSet syncSet = new HashSet();
        syncSet.add(SEMICOLON);
        syncSet.add(LEFT_BRACE);
        syncSet.add(RIGHT_BRACE);
        syncSet.add(EOF);
        handleError(ex, syncSet, true);
    }
  }

  static final public void Compound_stmt() throws ParseException {/*@bgen(jjtree) Compound_stmt */
  ASTCompound_stmt jjtn000 = new ASTCompound_stmt(JJTCOMPOUND_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LEFT_BRACE);
      Statement_list();
      jj_consume_token(RIGHT_BRACE);
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Statement_list() throws ParseException {
    label_1:
    while (true) {
      Statement();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VAR:
      case IF:
      case FUNCTION:
      case WHILE:
      case PRINTLN:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_1;
      }
    }
  }

  static final public void println() throws ParseException {/*@bgen(jjtree) println */
  ASTprintln jjtn000 = new ASTprintln(JJTPRINTLN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PRINTLN);
      jj_consume_token(LEFT_PARAN);
      Expression();
      jj_consume_token(RIGHT_PARAN);
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

//------- Function rules begin -------
  static final public 
void PureFunction() throws ParseException {/*@bgen(jjtree) PureFunction */
  ASTPureFunction jjtn000 = new ASTPureFunction(JJTPUREFUNCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LEFT_BRACE);
      Statement_list();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case RETURN:{
        jj_consume_token(RETURN);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TRUE:
        case FALSE:
        case STRING_LITERAL:
        case IDENTIFIER:
        case NUM:{
          Expression();
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          ;
        }
        jj_consume_token(SEMICOLON);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(RIGHT_BRACE);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void FunctionDeclaration() throws ParseException {/*@bgen(jjtree) FunctionDeclaration */
                            ASTFunctionDeclaration jjtn000 = new ASTFunctionDeclaration(JJTFUNCTIONDECLARATION);
                            boolean jjtc000 = true;
                            jjtree.openNodeScope(jjtn000);SymTabEntry funcID; SimpleNode funcNode;
    try {
      jj_consume_token(FUNCTION);
      jj_consume_token(IDENTIFIER);
// enter the function name into a symbol table stack
      funcID = symTabStack.enterLocal(token.image);
      funcID.setDefinition(DefinitionImpl.FUNCTION);
      funcID.appendLineNumber(token.beginLine);
          jjtn000.setAttribute(ID, funcID);
      jjtn000.setTypeSpec(symTabStack.lookup("void").getTypeSpec());
          //add all function decl to a list do 
      ArrayList<SimpleNode> funcArr = (ArrayList<SimpleNode>) programId.getAttribute(FUNCTIONS_CODE);
      funcArr.add(jjtn000);
      jj_consume_token(LEFT_PARAN);

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        jj_consume_token(IDENTIFIER);

        jj_consume_token(COLON);
        typeSignature();
